# tic-tac-toe

./: README.md  meson.build
data/: meson.build  tic-tac-toe.appdata.xml.in  tic-tac-toe.desktop.in
po/: POTFILES  bn.po  com.github.sirthomas.tic-tac-toe.pot
src/: Application.vala  meson.build
src/Widgets/: Button.vala  GameBox.vala  Grid.vala  TitleBar.vala
